Implemented grabbing all data packs from OCR doc page - need to implement listbox entries

--- a/OCROverlay/OCROverlay/OCROverlay.csproj
+++ b/OCROverlay/OCROverlay/OCROverlay.csproj
@@ -91,6 +91,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\LanguageEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -118,10 +119,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\tick.png" />
+    <Content Include="Resources\tick.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\cross.png" />
+    <Content Include="Resources\cross.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
