Reimplemented MVVM and events connecting them - need to implement relaycommand for window closing event to pass data between VMs

--- a/OCROverlay/OCROverlay/App.config
+++ b/OCROverlay/OCROverlay/App.config
@@ -13,6 +13,9 @@
             <setting name="FirstRun" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="SelectedLanguages" serializeAs="String">
+                <value />
+            </setting>
         </OCROverlay.Properties.Settings>
     </userSettings>
 </configuration>
