--- a/OCROverlay/OCROverlay/Properties/Settings.settings
+++ b/OCROverlay/OCROverlay/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="FirstRun" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="SelectedLanguages" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
