Reformed everything and implemented relaycommand for control uses

--- a/OCROverlay/OCROverlay/App.config
+++ b/OCROverlay/OCROverlay/App.config
@@ -11,9 +11,12 @@
     <userSettings>
         <OCROverlay.Properties.Settings>
             <setting name="FirstRun" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="SelectedLanguages" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DownloadLocation" serializeAs="String">
                 <value />
             </setting>
         </OCROverlay.Properties.Settings>
