--- a/OCROverlay/OCROverlay/Properties/Settings.settings
+++ b/OCROverlay/OCROverlay/Properties/Settings.settings
@@ -3,9 +3,12 @@
   <Profiles />
   <Settings>
     <Setting Name="FirstRun" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="SelectedLanguages" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="DownloadLocation" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
