--- a/OCROverlay/OCROverlay/OCROverlay.csproj
+++ b/OCROverlay/OCROverlay/OCROverlay.csproj
@@ -62,6 +62,9 @@
     <Reference Include="Microsoft.WindowsAPICodePack.Shell, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\WindowsAPICodePack-Shell.1.1.1\lib\Microsoft.WindowsAPICodePack.Shell.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Xaml.Behaviors, Version=1.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Xaml.Behaviors.Wpf.1.1.19\lib\net45\Microsoft.Xaml.Behaviors.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -102,6 +105,7 @@
     </Compile>
     <Compile Include="Events\ViewModelChangeEventArgs.cs" />
     <Compile Include="Util\DialogCloser.cs" />
+    <Compile Include="Util\MultiSelectionBehaviour.cs" />
     <Compile Include="Util\RelayCommand.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\LanguageSelectionVM.cs" />
