Added screen choosing - need to implement saving chosen screen to settings

--- a/OCROverlay/OCROverlay/OCROverlay.csproj
+++ b/OCROverlay/OCROverlay/OCROverlay.csproj
@@ -104,6 +104,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Events\ViewModelChangeEventArgs.cs" />
+    <Compile Include="Model\ScreenEntry.cs" />
     <Compile Include="Util\DialogCloser.cs" />
     <Compile Include="Util\MultiSelectionBehaviour.cs" />
     <Compile Include="Util\RelayCommand.cs" />
