Adapted save and restart procedure - needs to be made cleaner

--- a/OCROverlay/OCROverlay/App.config
+++ b/OCROverlay/OCROverlay/App.config
@@ -19,6 +19,9 @@
             <setting name="DownloadLocation" serializeAs="String">
                 <value />
             </setting>
+            <setting name="ChosenScreen" serializeAs="String">
+                <value />
+            </setting>
         </OCROverlay.Properties.Settings>
     </userSettings>
 </configuration>
