--- a/OCROverlay/OCROverlay/Properties/Settings.settings
+++ b/OCROverlay/OCROverlay/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="DownloadLocation" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ChosenScreen" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
