Added generic Property Manager class and methods, finished download manager and added Tesseract build binary. Added sample images to test on and more properties.

--- a/OCROverlay/OCROverlay/App.config
+++ b/OCROverlay/OCROverlay/App.config
@@ -22,6 +22,18 @@
             <setting name="ChosenScreen" serializeAs="String">
                 <value />
             </setting>
+            <setting name="LanguageDataPackList" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="TestProperty" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="HotkeyList" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Setting" serializeAs="String">
+                <value />
+            </setting>
         </OCROverlay.Properties.Settings>
     </userSettings>
 </configuration>
