Added the class for each detected word and enumeration over hocr results using the HtmlAgilityPack. Added additional sample images

--- a/OCROverlay/OCROverlay/OCROverlay.csproj
+++ b/OCROverlay/OCROverlay/OCROverlay.csproj
@@ -108,6 +108,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Events\ViewModelChangeEventArgs.cs" />
+    <Compile Include="Model\DetectedWord.cs" />
     <Compile Include="Model\ScreenEntry.cs" />
     <Compile Include="Util\DialogCloser.cs" />
     <Compile Include="Util\MultiSelectionBehaviour.cs" />
